alignment fixes

--- a/assets/styles/minimap-icons.css
+++ b/assets/styles/minimap-icons.css
@@ -30,7 +30,7 @@
 .dazzle              .herolist__hero__link:before { background-position: -5px -89px    }
 .death_prophet       .herolist__hero__link:before { background-position: -46px -89px   }
 .disruptor           .herolist__hero__link:before { background-position: -87px -89px   }
-.doom                .herolist__hero__link:before { background-position: -130px -89px  }
+.doom                .herolist__hero__link:before { background-position: -129px -89px  }
 .dragon_knight       .herolist__hero__link:before { background-position: -171px -89px  }
 .drow_ranger         .herolist__hero__link:before { background-position: -213px -89px  }
 .earth_spirit        .herolist__hero__link:before { background-position: -255px -89px  }
@@ -74,7 +74,7 @@
 .phantom_assassin    .herolist__hero__link:before { background-position: -173px -257px }
 .phantom_lancer      .herolist__hero__link:before { background-position: -215px -257px }
 .phoenix             .herolist__hero__link:before { background-position: -257px -257px }
-.puck                .herolist__hero__link:before { background-position: -299px -257px }
+.puck                .herolist__hero__link:before { background-position: -299px -256px }
 .pudge               .herolist__hero__link:before { background-position: -341px -257px }
 .pugna               .herolist__hero__link:before { background-position: -383px -257px }
 .queen_of_pain       .herolist__hero__link:before { background-position: -6px -299px   }
